--- a/init.html
+++ b/init.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h1 id='big_text'> You're computer god! </h1>
+    <button onClick="alert('button clicked')">click me!</button>
     <script src="script.js"></script>
   </body>
 </html>
