--- a/init.html
+++ b/init.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     <h1 id='big_text'> You're computer god! </h1>
     <button onClick="alert('button clicked')">click me!</button>
+    <p>Just writing sth</p>
+    <p>What do you think about this website: <a href="youtube.com">youtube</a>?</p>
     <script src="script.js"></script>
   </body>
 </html>
