--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 id='big_text'> You're computer god! </h1>
     <button onClick="alert('button clicked')">click me!</button>
     <p>Just writing sth</p>
-    <p>What do you think about this website: <a href="youtube.com">youtube</a>?</p>
+    <p>What do you think about this website: <a href="https://www.youtube.com">youtube</a>?</p>
     <script src="script.js"></script>
   </body>
 </html>
