--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <button onClick="alert('button clicked')">click me!</button>
     <p>Just writing sth</p>
     <p>What do you think about this website: <a href="https://www.youtube.com">youtube</a>?</p>
+    <p>That's a new paragraph</p>
     <script src="script.js"></script>
   </body>
 </html>
